force-app/main/default/objects/SUI_Agencies__c/SUI_Agencies__c.object-meta.xml
<CustomObject>
    <label>SUI Agencies</label>
    <nameField>
        <displayFormat>SUI-{0000}</displayFormat>
        <label>SUI Agencies Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>SUI Agencies</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>