force-app/main/default/objects/SUI_Agencies__c/fields/Early_Registration_Notes__c.field-meta.xml
<CustomField>
    <fullName>Early_Registration_Notes__c</fullName>
    <label>Early Registration Notes</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>