force-app/main/default/objects/SUI_Agencies__c/fields/How_does_Gusto_report_OOS_wages__c.field-meta.xml
<CustomField>
    <fullName>How_does_Gusto_report_OOS_wages__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>How does Gusto report OOS wages?</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>