force-app/main/default/objects/SUI_Agencies__c/fields/Maximum_SUI_Rate__c.field-meta.xml
<CustomField>
    <fullName>Maximum_SUI_Rate__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Maximum SUI Rate</label>
    <type>Checkbox</type>
</CustomField>