force-app/main/default/objects/SUI_Agencies__c/fields/Maximum_SUI_Rate_Effective_Date__c.field-meta.xml
<CustomField>
    <fullName>Maximum_SUI_Rate_Effective_Date__c</fullName>
    <label>Maximum SUI Rate Effective Date</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>