force-app/main/default/objects/SUI_Agencies__c/fields/New_Employer_Rate__c.field-meta.xml
<CustomField>
    <fullName>New_Employer_Rate__c</fullName>
    <defaultValue>false</defaultValue>
    <label>New Employer Rate</label>
    <type>Checkbox</type>
</CustomField>