force-app/main/default/objects/SUI_Agencies__c/recordTypes/Annual_Rate_Determinations.recordType-meta.xml
<RecordType>
    <fullName>Annual_Rate_Determinations</fullName>
    <active>true</active>
    <label>Annual Rate Determinations</label>
</RecordType>