force-app/main/default/objects/SUI_Agencies__c/recordTypes/General_SUI_Agency_Info.recordType-meta.xml
<RecordType>
    <fullName>General_SUI_Agency_Info</fullName>
    <active>true</active>
    <label>General SUI Agency Info</label>
</RecordType>