force-app/main/default/objects/SUI_Agencies__c/recordTypes/SUI_Liability.recordType-meta.xml
<RecordType>
    <fullName>SUI_Liability</fullName>
    <active>true</active>
    <label>SUI Liability</label>
</RecordType>