force-app/main/default/objects/SUI_Agencies__c/recordTypes/SUI_Reporting_Requirements.recordType-meta.xml
<RecordType>
    <fullName>SUI_Reporting_Requirements</fullName>
    <active>true</active>
    <label>SUI Reporting Requirements</label>
</RecordType>